# Haskell-Course-2026

homeworks/hw1/: Solution.hs
homeworks/hw2/: Solution.hs
homeworks/hw3/: Solution.hs
homeworks/hw4/: Solution.hs
homeworks/hw5/: Solution.hs
project/: .gitignore  description.md  hie.yaml  project.cabal
project/app/: Main.hs
project/src/: AST.hs  Parser.hs  Solver.hs
project/test/: EndToEndSpec.hs  ParserSpec.hs  SolverSpec.hs  Spec.hs  australia.csp  nqueens.csp  sudoku.csp
